lisätty html koodia

--- a/etusivu.html
+++ b/etusivu.html
@@ -20,14 +20,14 @@
     </header>
     <section>
       <article class="">
-  <!-- tähän kuva -->
+        <img src="https://www.worldatlas.com/r/w960-q80/upload/8a/6e/a6/shutterstock-519883603.jpg" alt="Kaloja meressä">
       </article>
     </section>
     <section>
       <aside class="">
         <article class="">
           <h2>Kirjoittajasta</h2>
-    <!-- tähän kuva -->
+            <img src="https://tinyurl.com/4k9fwksc" alt="Soutaja soutaa saareen">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </article>
       </aside>
@@ -43,7 +43,26 @@
         </article>
     </section>
     <footer>
-    <!-- footerin teko kesken -->
+      <table>
+        <tr>
+          <td class="kursivointi">Seppälän Tyyne
+            <br>
+            Mariankatu 2, 00170 Helsinki
+            <br>
+            (09) 66 77 88
+          </td>
+          <td>
+            <img src="https://tinyurl.com/dud87r77"       alt="Piikikäs merieläin">
+            <img src="https://tinyurl.com/wa9h9cvh" alt="Vedenalainen kasvi">
+          </td>
+          <td><h3>Hyviä linkkejä</h3>
+            <a class="pinkki" href="https://tinyurl.com/app">Lyhentää pitkät URL:t</a>
+            <a class="pinkki" href="#">Löydä ikoni</a>
+            <a class="pinkki" href="#">Tulosta web-sivu ilman taustaa</a>
+            <a class="pinkki" href="https://kotimikro.fi/internet/laheta-isoja-tiedostoja-netissa">Isojen tiedostojen jakoon</a>
+          </td>
+        </tr>
+      </table>
     </footer>
   </body>
 </html>
