--- a/Projekti3.html
+++ b/Projekti3.html
@@ -2,9 +2,17 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="projekti3.css">
     <title>Parallax Sivusto</title>
   </head>
   <body>
-
+     <div class="kuva1">
+  <div class="otsikko">
+    <span class="reuna">
+      Parallax Website
+    </span>
+  </div>
+</div>
   </body>
 </html>
