--- a/Projekti3.html
+++ b/Projekti3.html
@@ -4,15 +4,61 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="projekti3.css">
+    <link href="https://fonts.googleapis.com/ css2?family=Zhi+Mang+Xing&display=swap" rel="stylesheet">
     <title>Parallax Sivusto</title>
   </head>
   <body>
-     <div class="kuva1">
-  <div class="otsikko">
-    <span class="reuna">
-      Parallax Website
-    </span>
-  </div>
-</div>
+    <div id="parallax1">
+    <!-- ensimmäinen parallax kuva tähän -->
+        <h1>Web-sivuston nimi</h1>
+    <!-- lähde Arial 8 fontilla -->
+        <p class="lahde"></p>
+    </div>
+
+    <section>
+      <h2>Jasmin harrastus</h2>
+        <article class="harrastustxt">
+          <p>harrastus teksti</p>
+        </article>
+    </section>
+
+    <div id="parallax2">
+      <!-- Jasmin harrastus parallax kuva tähän -->
+        <h3>harrastuksen nimi</h3>
+        <p class="lahde"></p>
+    </div>
+
+    <section>
+      <h2>Mika harrastus</h2>
+        <article class="harrastustxt">
+          <p>harrastus teksti</p>
+        </article>
+    </section>
+
+    <div id="parallax3">
+      <!-- Mika harrastus parallax kuva tähän -->
+        <h3>harrastuksen nimi</h3>
+        <p class="lahde"></p>
+    </div>
+
+    <section>
+      <h2>Niko harrastus</h2>
+        <article class="harrastustxt">
+          <!-- <p>harrastus teksti</p> -->
+        </article>
+    </section>
+
+    <div id="parallax4">
+      <img src="musiikki.jpg" alt="kuva orkesterista">
+        <h3>Musiikki</h3>
+        <p class="lahde"><a href="https://commons.wikimedia.org/wiki/File:HOME1_orchestra.jpg">Wikimedia</a></p>
+    </div>
+
+    <div id="parallax5">
+      <!-- viides parallax kuva tähän -->
+        <h2>ryhmän jäsenten nimet</h2>
+        <p class="lahde"></p>
+    </div>
+
   </body>
 </html>
