--- a/Projekti3.html
+++ b/Projekti3.html
@@ -31,14 +31,15 @@
     <section>
       <h2>Mika harrastus</h2>
         <article class="harrastustxt">
-          <p>harrastus teksti</p>
+          <p>E-Urheilu on tietotekniikkaa hyödyntävää kilpaurheilua, tätä harrastetaan niin joukkue- että yksilömuodossakin mutta tämä riippuu toki pelistä ja pelimuodosta. Tavallisimpia e-urheilun pelejä on tietokoneella tai konsolilla toimivia pelejä jotka jakautuvat useampaan "genreen".
+          <br>E-Urheilua voi harrastaa kuka vaan joka käyttää jonkinnäköistä tietoteknistä pelilaitetta pelatakseen yksin tai toisten kanssa internetin välityksellä.</p>
         </article>
     </section>
 
     <div id="parallax3">
-      <!-- Mika harrastus parallax kuva tähän -->
-        <h3>harrastuksen nimi</h3>
-        <p class="lahde"></p>
+      <img src="eurheilu.jpg" alt="Kuva E-Urheilusta/P">
+        <h3>E-Urheilu</h3>
+        <p class="lahde"><a href="https://commons.wikimedia.org/wiki/File:The_International_2014.jpg">Wikimedia</a></p>
     </div>
 
     <section>
@@ -56,7 +57,7 @@
 
     <div id="parallax5">
       <!-- viides parallax kuva tähän -->
-        <h2>ryhmän jäsenten nimet</h2>
+        <h2>Niko, Jasmin, Mika</h2>
         <p class="lahde"></p>
     </div>
 
