--- a/Projekti3.html
+++ b/Projekti3.html
@@ -4,17 +4,19 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="projekti3.css">
+    <!-- Zhi Mang Xing -niminen fontti -->
     <link href="https://fonts.googleapis.com/ css2?family=Zhi+Mang+Xing&display=swap" rel="stylesheet">
     <title>Parallax Sivusto</title>
   </head>
   <body>
+    <!-- tämä osa on ensimmäinen harrastuksiin liittymätön parallax kuva, jonka päälle tulee h1 tason otsikkona web-sivuston nimi. sekä sen alapuolelle arial 8 fontilla kuvan lähde -->
     <div id="parallax1">
     <!-- ensimmäinen parallax kuva tähän -->
-        <h1>Web-sivuston nimi</h1>
-    <!-- lähde Arial 8 fontilla -->
+      <h1>(Ja)(Mi)(Ni)n Parallax sivusto</h1>
         <p class="lahde"></p>
     </div>
 
+    <!-- tämä section pätkä tulee olemaan koko sivun leveydellä oleva värillinen laatikko jonka sisällä on h2 tason otsikko, sekä sen alapuolelle tulee tekstiä harrastuksesta. -->
     <section>
       <h2>Jasmin harrastus</h2>
         <article class="harrastustxt">
@@ -22,12 +24,14 @@
         </article>
     </section>
 
+    <!-- tähän div osioon tulee parallax kuva jasminin harrastuksesta, ja h3 tason otsikolla kuvan päälle harrastuksen nimi -->
     <div id="parallax2">
       <!-- Jasmin harrastus parallax kuva tähän -->
         <h3>harrastuksen nimi</h3>
         <p class="lahde"></p>
     </div>
 
+    <!-- tämä section pätkä tulee olemaan koko sivun leveydellä oleva värillinen laatikko jonka sisällä on h2 tason otsikko, sekä sen alapuolelle tulee tekstiä harrastuksesta. -->
     <section>
       <h2>Mika harrastus</h2>
         <article class="harrastustxt">
@@ -36,25 +40,30 @@
         </article>
     </section>
 
+    <!-- tähän div osioon tulee parallax kuva mikan harrastuksesta, ja h3 tason otsikolla kuvan päälle harrastuksen nimi -->
     <div id="parallax3">
       <img src="eurheilu.jpg" alt="Kuva E-Urheilusta/P">
         <h3>E-Urheilu</h3>
         <p class="lahde"><a href="https://commons.wikimedia.org/wiki/File:The_International_2014.jpg">Wikimedia</a></p>
     </div>
 
+    <!-- tämä section pätkä tulee olemaan koko sivun leveydellä oleva värillinen laatikko jonka sisällä on h2 tason otsikko, sekä sen alapuolelle tulee tekstiä harrastuksesta. -->
     <section>
       <h2>Niko harrastus</h2>
         <article class="harrastustxt">
-          <!-- <p>harrastus teksti</p> -->
+          <p>Musiikki on aina ollut lähellä sieluani, enkä voisi elää ilman sitä. Kuva viittaa oopperaan, mutta olen kaikki ruokainen musiikin suhteen. Musiikki jossa välittyy tunteet vahvasti, on sitä mitä mieleni kaipaa. Myös kaikenlainen tekeminen kotona, ulkona tai missä vaan, ei toimi ilman musiikkia. Joku joskus kysyi minulta että voisinko elää onnellisena ilman kuulo- tai näkökykyä? Vastasin että näkö ei ole minulle niin tärkeä asia kuin kuuleminen ja äänet. Tosin nyt koodaajaksi opiskelevana en voi luopua kummastakaan. </p>
         </article>
     </section>
 
+    <!-- tähän div osioon tulee parallax kuva nikon harrastuksesta, ja h3 tason otsikolla kuvan päälle harrastuksen nimi -->
     <div id="parallax4">
       <img src="musiikki.jpg" alt="kuva orkesterista">
         <h3>Musiikki</h3>
         <p class="lahde"><a href="https://commons.wikimedia.org/wiki/File:HOME1_orchestra.jpg">Wikimedia</a></p>
     </div>
 
+    <!-- tähän tulee sivun viimeinen parallax kuva joka ei liity harrastuksiimme -->
+    <!-- ryhmän jäsenten nimet H2-tason otsikkona siten, että Google Fontsista on haettu siihen Zhi Mang Xing -niminen fontti -->
     <div id="parallax5">
       <!-- viides parallax kuva tähän -->
         <h2>Niko, Jasmin, Mika</h2>
