--- a/Projekti3.html
+++ b/Projekti3.html
@@ -4,16 +4,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="projekti3.css">
-    <!-- Zhi Mang Xing -niminen fontti -->
-    <link href="https://fonts.googleapis.com/ css2?family=Zhi+Mang+Xing&display=swap" rel="stylesheet">
+    <!-- Zhi Mang Xing -niminen fontti, tämä antaa CSS käyttää kyseistä fonttia nettisivuilla -->
+    <link href="https://fonts.googleapis.com/css2?family=Zhi+Mang+Xing&display=swap" rel="stylesheet">
     <title>Parallax Sivusto</title>
   </head>
   <body>
     <!-- tämä osa on ensimmäinen harrastuksiin liittymätön parallax kuva, jonka päälle tulee h1 tason otsikkona web-sivuston nimi. sekä sen alapuolelle arial 8 fontilla kuvan lähde -->
     <div id="parallax1">
-    <!-- ensimmäinen parallax kuva tähän -->
+      <img src="kuva1.jpg" alt="kuva kuplista">
       <h1>(Ja)(Mi)(Ni)n Parallax sivusto</h1>
-        <p class="lahde"></p>
+        <p class="lahde"><a href="https://pixabay.com/illustrations/background-bubble-desktop-round-out-3048067/">PixaBay</a></p>
     </div>
 
     <!-- tämä section pätkä tulee olemaan koko sivun leveydellä oleva värillinen laatikko jonka sisällä on h2 tason otsikko, sekä sen alapuolelle tulee tekstiä harrastuksesta. -->
@@ -26,23 +26,22 @@
 
     <!-- tähän div osioon tulee parallax kuva jasminin harrastuksesta, ja h3 tason otsikolla kuvan päälle harrastuksen nimi -->
     <div id="parallax2">
-      <!-- Jasmin harrastus parallax kuva tähän -->
-        <h3>harrastuksen nimi</h3>
-        <p class="lahde"></p>
+      <img src="piirrustus.jpg" alt="kuva piirroksesta">
+        <h3>Piirtäminen</h3>
+        <p class="lahde"><a href="https://commons.wikimedia.org/wiki/File:Drawing_of_a_drawing.JPG">Wikimedia</a></p>
     </div>
 
     <!-- tämä section pätkä tulee olemaan koko sivun leveydellä oleva värillinen laatikko jonka sisällä on h2 tason otsikko, sekä sen alapuolelle tulee tekstiä harrastuksesta. -->
     <section>
       <h2>Mika harrastus</h2>
         <article class="harrastustxt">
-          <p>E-Urheilu on tietotekniikkaa hyödyntävää kilpaurheilua, tätä harrastetaan niin joukkue- että yksilömuodossakin mutta tämä riippuu toki pelistä ja pelimuodosta. Tavallisimpia e-urheilun pelejä on tietokoneella tai konsolilla toimivia pelejä jotka jakautuvat useampaan "genreen".
-          <br>E-Urheilua voi harrastaa kuka vaan joka käyttää jonkinnäköistä tietoteknistä pelilaitetta pelatakseen yksin tai toisten kanssa internetin välityksellä.</p>
+          <p>E-Urheilu on minulle kuin harrastus ollut nyt monta vuotta peräkkäin, sillä mikään ei ole ollut mukavempaa kuin istua tietokoneen ääreen ja pitää hauskaa kavereiden kanssa pelatessa kaikennäköisiä pelejä. Alla olevassa kuvassa näkyy 2014 kansainvälinen Dota 2 mestaruusturnaus, sillä tahtoisin itsekkin joskus mahdollisesti päästä pelaamaan jonnekin isompaan turnaukseen, olen kyllä pienissä turnauksissa jossa ollut rahapalkintoja (max 1000€ per henkilö). E-Urheilu on tuonut minua lähemmäksi tietokoneiden kanssa joka on auttanut minua datanomi alan opiskeluissa melko paljon.</p>
         </article>
     </section>
 
     <!-- tähän div osioon tulee parallax kuva mikan harrastuksesta, ja h3 tason otsikolla kuvan päälle harrastuksen nimi -->
     <div id="parallax3">
-      <img src="eurheilu.jpg" alt="Kuva E-Urheilusta/P">
+      <img src="eurheilu.jpg" alt="kuva e-urheilusta">
         <h3>E-Urheilu</h3>
         <p class="lahde"><a href="https://commons.wikimedia.org/wiki/File:The_International_2014.jpg">Wikimedia</a></p>
     </div>
@@ -65,9 +64,9 @@
     <!-- tähän tulee sivun viimeinen parallax kuva joka ei liity harrastuksiimme -->
     <!-- ryhmän jäsenten nimet H2-tason otsikkona siten, että Google Fontsista on haettu siihen Zhi Mang Xing -niminen fontti -->
     <div id="parallax5">
-      <!-- viides parallax kuva tähän -->
+      <img src="kuva2.jpg" alt="kuva hienosta maisemasta">
         <h2>Niko, Jasmin, Mika</h2>
-        <p class="lahde"></p>
+        <p class="lahde"><a href="https://pxhere.com/en/photo/1455909">PxHere</a></p>
     </div>
 
   </body>
