--- a/Projekti1.html
+++ b/Projekti1.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Loremin matkat</title>
-    <link href="CSS-harjoitukset/Projekti1.css" rel="stylesheet" type="text/css">
+    <link href="Projekti1.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <header>
