--- a/projekti-3.html
+++ b/projekti-3.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="CSS-harjoitukset/projekti-3.css" type="text/css">
+    <link rel="stylesheet" href="projekti-3.css" type="text/css">
     <!-- Zhi Mang Xing -niminen fontti, tämä antaa CSS käyttää kyseistä fonttia nettisivuilla -->
     <link href="https://fonts.googleapis.com/css2?family=Zhi+Mang+Xing&display=swap" rel="stylesheet">
     <title>Parallax Sivusto</title>
