--- a/projekti4.html
+++ b/projekti4.html
@@ -7,6 +7,8 @@
 </head>
 
 <body>
+  <!-- COMBAK: testi -->
+  
   <!-- COMBAK:
     Tehkää sivusto, josta voi ilmoittautua tapahtumaan. Sivustossa kerrotaan ensin tapahtumasta tarkempia tietoja. Mieti itse, mikä seminaari se oisi ja maksaisiko se jne
      -->
