--- a/projekti4.html
+++ b/projekti4.html
@@ -8,7 +8,8 @@
 
 <body>
   <!-- COMBAK: testi -->
-  
+  <!-- COMBAK: testiä -->
+
   <!-- COMBAK:
     Tehkää sivusto, josta voi ilmoittautua tapahtumaan. Sivustossa kerrotaan ensin tapahtumasta tarkempia tietoja. Mieti itse, mikä seminaari se oisi ja maksaisiko se jne
      -->
