projektin aloittelua, tiedostojen luonti

--- a/projekti4.html
+++ b/projekti4.html
@@ -3,12 +3,48 @@
 
 <head>
   <meta charset="utf-8">
+<!-- tapahtuman nimi? -->
   <title></title>
+  <link rel="stylesheet" href="projekti4.css">
 </head>
 
 <body>
-  <!-- COMBAK: testi -->
-  <!-- COMBAK: testiä -->
+<!-- header osio -->
+  <header id="yla">
+    <div class="logo">
+<!-- tähän mahdollisesti joku kiva logo -->
+    </div>
+    <div class="otsikko">
+<!-- tapahtuman nimi -->
+    </div>
+  </header>
+
+<!-- mainboxiin tapahtuman esittely ja muut mahdolliset herkut + alas nappi josta siirtyy ilmoittautumis sivulle -->
+  <main id="mainbox">
+    <div class="maintxt">
+<!-- tapahtuman leipätekstiä ja esittelyä -->
+    </div>
+    <div class="button">
+      <button id="nappi" type="button" name="ilmoittaudu">Ilmoittaudu tästä</button>
+    </div>
+  </main>
+
+<!-- sideboxiin mahdollisesti jotain kivoja kuvia? -->
+  <aside class="sidebox">
+    <div>
+      <table>
+        <td> <img src="" alt=""> </td>
+        <td> <img src="" alt=""> </td>
+        <td> <img src="" alt=""> </td>
+      </table>
+    </div>
+  </aside>
+
+<!-- footteriin jotain? -->
+  <footer>
+
+  </footer>
+
 
   <!-- COMBAK:
     Tehkää sivusto, josta voi ilmoittautua tapahtumaan. Sivustossa kerrotaan ensin tapahtumasta tarkempia tietoja. Mieti itse, mikä seminaari se oisi ja maksaisiko se jne
