--- a/projekti4_2.html
+++ b/projekti4_2.html
@@ -8,5 +8,19 @@
   <body>
 <!-- COMBAK: tänne rakannetaan ilmoittautumis sivu -->
 
+<!-- COMBAK:
+  Sukunimi
+  Etunimet
+  Osoitetitedot - SEIS, muistatko, mitä puhuttiin tunnilla - mahdollisimman pieniksi osiksi
+  Puhelin
+  Sähköposti
+  Työnantaja tai jos opiskelija oppilaitos
+  Ammattinimike tai jos opiskelija: opiskelija
+  Syntymäaika - SEIS, mieti kentän tyyppi, tällä kertaa EI OLE varchar
+  Tapahtuman hintavaihtoehdot
+  Erikoisruokavalio
+  Lisätietoja
+  -->
+
   </body>
 </html>
