--- a/projekti4.html
+++ b/projekti4.html
@@ -3,8 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-<!-- tapahtuman nimi? -->
-  <title></title>
+  <title>Matelija messut</title>
   <link rel="stylesheet" href="projekti4.css">
 </head>
 
@@ -15,7 +14,7 @@
 <!-- tähän mahdollisesti joku kiva logo -->
     </div>
     <div class="otsikko">
-<!-- tapahtuman nimi -->
+      <h1>Matelija messut</h1>
     </div>
   </header>
 
