--- a/projekti4.html
+++ b/projekti4.html
@@ -3,28 +3,43 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Matelija messut</title>
-  <link rel="stylesheet" href="projekti4.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Matelijamessut</title>
+  <link rel="stylesheet" href="projekti4.css" type="text/css">
 </head>
 
 <body>
 <!-- header osio -->
   <header id="yla">
     <div class="logo">
-<!-- tähän mahdollisesti joku kiva logo -->
+      <img id="kilpikonna" src="kilppari.svg" alt="kilpikonna logo">
     </div>
     <div class="otsikko">
-      <h1>Matelija messut</h1>
+      <h1>MATELIJAMESSUT</h1>
     </div>
   </header>
 
 <!-- mainboxiin tapahtuman esittely ja muut mahdolliset herkut + alas nappi josta siirtyy ilmoittautumis sivulle -->
   <main id="mainbox">
     <div class="maintxt">
-<!-- tapahtuman leipätekstiä ja esittelyä -->
+      <h3>Tervetuloa Keravalle herppien ystävät</h3>
+      <p>Herppitapahtuma on kaikille matelijoiden, sammakkoeläimien ja selkärangattomien ystäville, myyjille sekä ostajille.
+      Tapahtumaan ovat tervetulleita niin yritykset, yhdistykset, kasvattajat kuin harrastajatkin. Pääasia on, että kiinnostus on herpeissä. Voit myös tulla pelkästään katsomaan ja tutustumaan erikoisiin ja kauniisiin matelijoihin.
+      Tämä tapahtuma tarjoaa loistavan myyntipaikan yrityksille sekä kasvattajille, esittelypaikan yhdistyksille sekä paljon uusia samanhenkisiä tuttavuuksia.
+      </p>
+      <p>
+      Tapahtuman hinnat: <br>
+      Sisäänpääsymaksu 15e/hlö (alle 12v lapset maksutta) <br>
+      Opiskelija tai eläkeläinen 5e <br>
+      Herppien myyjät 150e/pöytä + lisäpöytä 20e <br>
+      Voit myös 2e lisähinnasta ruokailla tapahtumassa, kerrothan mahdollisista erityisruokavalioistasi ilmoittautumis sivulla.
+      Mikäli kiinnostuit tapahtumasta ja tahdot siihen osallistua, ole hyvä ja siirry alempana olevasta ilmoittautumis kohdasta uudelle sivulle missä voit täyttää tietosi.
+      </p>
     </div>
     <div class="button">
-      <button id="nappi" type="button" name="ilmoittaudu">Ilmoittaudu tästä</button>
+      <a href="projekti4_2.html">
+      <button id="nappi" type="button" name="ilmoittaudu">Siirry tästä ilmoittautumis sivulle</button>
+      </a>
     </div>
   </main>
 
@@ -45,9 +60,6 @@
   </footer>
 
 
-  <!-- COMBAK:
-    Tehkää sivusto, josta voi ilmoittautua tapahtumaan. Sivustossa kerrotaan ensin tapahtumasta tarkempia tietoja. Mieti itse, mikä seminaari se oisi ja maksaisiko se jne
-     -->
 
 
 </body>
