täydennystä HTML koodiin

--- a/projekti4.html
+++ b/projekti4.html
@@ -29,10 +29,10 @@
       </p>
       <p>
       Tapahtuman hinnat: <br>
-      Sisäänpääsymaksu 15e/hlö (alle 12v lapset maksutta) <br>
+      Sisäänpääsymaksu 10e/hlö (alle 10v lapset maksutta) <br>
       Opiskelija tai eläkeläinen 5e <br>
-      Herppien myyjät 150e/pöytä + lisäpöytä 20e <br>
-      Voit myös 2e lisähinnasta ruokailla tapahtumassa, kerrothan mahdollisista erityisruokavalioistasi ilmoittautumis sivulla.
+      Herppien myyjät 150e/pöytä + lisäpöytä 50e <br>
+      Voit myös 5e lisähinnasta ruokailla tapahtumassa, kerrothan mahdollisista erityisruokavalioistasi ilmoittautumis sivulla. <br>
       Mikäli kiinnostuit tapahtumasta ja tahdot siihen osallistua, ole hyvä ja siirry alempana olevasta ilmoittautumis kohdasta uudelle sivulle missä voit täyttää tietosi.
       </p>
     </div>
@@ -41,26 +41,40 @@
       <button id="nappi" type="button" name="ilmoittaudu">Siirry tästä ilmoittautumis sivulle</button>
       </a>
     </div>
+    <br>
+
+<!-- kuvat matelijoista -->
+    <div class="kuvat">
+      <img src="hamahakki1.jpg" alt="kuva hämähäkistä">
+      <img src="kaarme1.jpg" alt="kuva käärmeestä">
+      <img src="kilpikonna1.png" alt="kuva kilpikonnasta">
+      <img src="lisko1.jpg" alt="kuva liskosta">
+      <img src="sammakko1.jpg" alt="kuva sammakosta">
+      <img src="sirkka1.jpg" alt="kuva sirkasta">
+    </div>
+
   </main>
 
-<!-- sideboxiin mahdollisesti jotain kivoja kuvia? -->
-  <aside class="sidebox">
-    <div>
-      <table>
-        <td> <img src="" alt=""> </td>
-        <td> <img src="" alt=""> </td>
-        <td> <img src="" alt=""> </td>
-      </table>
-    </div>
-  </aside>
-
-<!-- footteriin jotain? -->
   <footer>
-
+    <table>
+<!-- tämä vasempaan alareunaan -->
+      <td id="vasen">
+        <address class="osoite">
+          <p>Keuda Kerava, liikuntasali</p>
+          <p>Sarviniitynkatu 9</p>
+          <p>04200 Kerava</p>
+        </address>
+      </td>
+<!-- tämä oikeaan alareunaan -->
+      <td id="oikea">
+        <p>Messujen järjestäjinä toimivat</p>
+        <p>Keuda Kerava keskikadun opiskelijat</p>
+        <p>Niko Alander</p>
+        <p>Mika Björn</p>
+        <p>Jasmin Junnonen</p>
+      </td>
+    </table>
   </footer>
-
-
-
 
 </body>
 
