--- a/projekti4_2.html
+++ b/projekti4_2.html
@@ -24,11 +24,11 @@
   <label for="etunimet">Etunimet: </label>
     <input type="text" name="etunimet" value=""><br>
   <label for="kaupunki">Postitoimipaikka: </label>
-    <input type="text" name=kaupunki"" value="" placeholder="Helsinki"><br>
+    <input type="text" name=kaupunki"" value="" placeholder="Kerava"><br>
   <label for="postinumero">Postinumero: </label>
-    <input type="text" name="postinumero" value="" placeholder="00520"><br>
+    <input type="text" name="postinumero" value="" placeholder="04200"><br>
   <label for="osoite">Postiosoitteesi: </label>
-    <input type="text" name="osoite" value="" placeholder="Messuaukio 1"><br>
+    <input type="text" name="osoite" value="" placeholder="Sarviniitynkatu 9"><br>
   <label for="puhelin">Puhelinnumero: </label>
     <input type="text" name="puhelin" value=""><br>
   <label for="sposti">Sähköposti: </label>
