parit href ja src muutettu

--- a/projekti4-2.html
+++ b/projekti4-2.html
@@ -4,13 +4,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Matelijamessut ilmottautuminen</title>
-  <link rel="stylesheet" href="CSS-harjoitukset/projekti-4.css" type="text/css">
+  <link rel="stylesheet" href="projekti-4.css" type="text/css">
 </head>
   <body>
     <!-- header osio -->
     <header class="yla">
       <h1>MATELIJAMESSUT</h1>
-        <img src="kilppari.png" alt="kilpikonna logo" class="logo-kilpikonna">
+        <img src="kilppari.svg" alt="kilpikonna logo" class="logo-kilpikonna">
         <nav>
           <ul>
             <li><a href="projekti-4.html">Kotisivu</a></li>
