--- a/projekti4-2.html
+++ b/projekti4-2.html
@@ -56,6 +56,10 @@
   <label for="herppi">Herppien myyjä | 150€/pöytä</label><br>
     <input type="checkbox" name="lisäpöytä" value="">
   <label for="lisäpöytä">Lisäpöytä | 50€</label><br>
+  <input type="checkbox" name="normaali ruokailu" value="">
+  <label for="normaali ruokailu">Normaali ruokailu | 5€</label><br>
+  <input type="checkbox" name="erikoisruokavalio" value="">
+  <label for="erikoisruokavalio">Erikoisruokavalio | 10€</label><br>
   <br>
   <label for="lisätietoja">Lisätietoja: </label><br>
   <textarea name="lisätietoja" rows="8" cols="70" placeholder="Kerro mahdollisia lisätietoja, jos mitään ei ole jätä tyhjäksi!"></textarea><br>
