--- a/projekti-1A.html
+++ b/projekti-1A.html
@@ -108,7 +108,7 @@
     </div>
 
     <div class="buttons">
-      <button type="button" name="tyhjenna" onclick="tyhjenna()">Tyhjennä</button>
+      <button type="reset" name="tyhjenna" onclick="tyhjenna()">Tyhjennä</button>
     </div>
 
   </form>
