--- a/projekti-1A.html
+++ b/projekti-1A.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <script src="projekti-1A.js" type="text/javascript"></script>
+    <script src="projekti-1A.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link type="text/css" rel="stylesheet" href="projekti-1A.css">
     <meta charset="utf-8">
@@ -21,12 +21,12 @@
 <!-- käyttäjätunnus ja salasana -->
 
     <div class="lomakkeet">
-      <form>
-        <label for="kayttajatunnus"> <b>Käyttäjätunnus:</b></label><br>
+      <form id="formi" action="index.html" method="post">
+        <label for="tunnus"> <b>Käyttäjätunnus:</b></label><br>
           <input type="text" name="kayttajatunnus" value="" size="25"><br><br>
 
         <label for="salasana"> <b>Salasana:</b> </label><br>
-          <input type="password" name="salasana" value="" size="25"><br><br><br>
+          <input type="password" name="salasana" value="" size="25"><br><br>
     </div>
 
 <!-- checkboxit ja lopussa tekstikenttä -->
@@ -104,7 +104,7 @@
 <!-- lähetys ja tyhjennys napit -->
 
     <div class="buttons">
-      <button type="button" name="laheta" onclick="tarkista()">Lähetä</button>
+      <button type="button" name="laheta" onclick="tarkista(formi)">Lähetä</button>
     </div>
 
     <div class="buttons">
