JS käyttäjätunnus, salasana, checkbox ja radionapit toimii.

--- a/projekti-1A.html
+++ b/projekti-1A.html
@@ -34,22 +34,22 @@
     <div class="lomakkeet">
       <label for="onkoMatelijaa"><b>Onko sinulla matelijaa ja jos on niin millainen?</b></label><br><br>
 
-        <input id="onkoMatelijaa_ei" type="checkbox" name="onkoMatelijaa_vastaus1" value="">
+        <input id="onkoMatelijaa_ei" type="checkbox" name="onkoMatelijaa_vastaus" value="">
       <label for="onkoMatelijaa_ei">Minulla ei ole omaa matelijaa</label><br>
 
-        <input id="onkoMatelijaa_kaarme" type="checkbox" name="onkoMatelijaa_vastaus2" value="">
+        <input id="onkoMatelijaa_kaarme" type="checkbox" name="onkoMatelijaa_vastaus" value="">
       <label for="onkoMatelijaa_kaarme">Käärme</label><br>
 
-        <input id="onkoMatelijaa_lisko" type="checkbox" name="onkoMatelijaa_vastaus3" value="">
+        <input id="onkoMatelijaa_lisko" type="checkbox" name="onkoMatelijaa_vastaus" value="">
       <label for="onkoMatelijaa_lisko">Lisko</label><br>
 
-        <input id="onkoMatelijaa_sammakko" type="checkbox" name="onkoMatelijaa_vastaus4" value="">
+        <input id="onkoMatelijaa_sammakko" type="checkbox" name="onkoMatelijaa_vastaus" value="">
       <label for="onkoMatelijaa">Sammakko</label><br>
 
-        <input id="onkoMatelijaa_kilpikonna" type="checkbox" name="onkoMatelijaa_vastaus5" value="">
+        <input id="onkoMatelijaa_kilpikonna" type="checkbox" name="onkoMatelijaa_vastaus" value="">
       <label for="onkoMatelijaa_kilpikonna">Kilpikonna</label><br>
 
-        <input id="onkoMatelijaa_muu" type="checkbox" name="onkoMatelijaa_vastaus6" value="">
+        <input id="onkoMatelijaa_muu" type="checkbox" name="onkoMatelijaa_vastaus" value="">
       <label for="onkoMatelijaa_muu">Jokin muu:</label><br>
 
       <label for="lisatietoja">Mikä?</label><br>
