--- a/Laskuri.html
+++ b/Laskuri.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Laskuri</title>
+    <link rel="stylesheet" href="Laskuri.css">
   </head>
   <body>
       <form name="calculator">
-         <table>
+         <table id="calctable">
             <tr>
                <td colspan="4"><input type="text" id="ruutu" name="display" disabled></td>
             </tr>
