--- a/Laskuri.html
+++ b/Laskuri.html
@@ -13,7 +13,7 @@
             </tr>
             <tr>
               <td><input type="button" id="tyhjenna" value="AC" onclick="calculator.display.value = ''"></td>
-              <td><input type="button" id="poista" value="C" onclick="calculator.display.value = ''"></td>
+              <td><input type="button" id="poista" value="DEL" onclick="calculator.display.value = calculator.display.value.substr(0,calculator.display.value.length-1)"></td>
               <td><input type="button" id="prosenttilasku" value="%" onclick="calculator.display.value += '%'"></td>
               <td><input type="button" id="jakolasku" value="/" onclick="calculator.display.value += '/'"></td>
             </tr>
