--- a/Laskuri.html
+++ b/Laskuri.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Laskuri</title>
-    <link rel="stylesheet" href="Laskuri.css">
+    <link rel="stylesheet" href="CSS-harjoitukset/Laskuri.css">
   </head>
   <body>
       <form name="calculator">
