--- a/projekti-5/index.html
+++ b/projekti-5/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="muoto.css">
     <script src="java.js"></script>
     <meta charset="utf-8">
@@ -9,7 +10,9 @@
   <body>
     <h1 class="page-title">Muistipeli</h1>
     <div class="game-container">
-      <div class="game-info-container">
+
+<!-- COMBAK: tämän laskurin voisi lisätä koodiin joskus myöhemmin  -->
+<!--  <div class="game-info-container">
         <div class="game-info">
           <p>TIME</p> <span id="time-remaining">100</span>
         </div>
@@ -17,22 +20,88 @@
           <p>FLIPS</p> <span id="flips">0</span>
         </div>
       </div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
+-->
+      <div class="card">
+        <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
+        <img class="card-front" src="" alt="">
+        <!-- korttien toiset puolet puuttuu -->
+      </div>
+
+      <div class="card">
+        <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
+        <img class="card-front" src="" alt="">
+      </div>
+
+      <div class="card">
+        <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
+        <img class="card-front" src="" alt="">
+      </div>
+
+      <div class="card">
+        <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
+        <img class="card-front" src="" alt="">
+      </div>
+
+      <div class="card">
+        <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
+        <img class="card-front" src="" alt="">
+      </div>
+
+      <div class="card">
+        <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
+        <img class="card-front" src="" alt="">
+      </div>
+
+      <div class="card">
+        <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
+        <img class="card-front" src="" alt="">
+      </div>
+
+      <div class="card">
+        <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
+        <img class="card-front" src="" alt="">
+      </div>
+
+      <div class="card">
+        <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
+        <img class="card-front" src="" alt="">
+      </div>
+
+      <div class="card">
+        <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
+        <img class="card-front" src="" alt="">
+      </div>
+
+      <div class="card">
+        <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
+        <img class="card-front" src="" alt="">
+      </div>
+
+      <div class="card">
+        <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
+        <img class="card-front" src="" alt="">
+      </div>
+
+      <div class="card">
+        <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
+        <img class="card-front" src="" alt="">
+      </div>
+
+      <div class="card">
+        <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
+        <img class="card-front" src="" alt="">
+      </div>
+
+      <div class="card">
+        <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
+        <img class="card-front" src="" alt="">
+      </div>
+
+      <div class="card">
+        <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
+        <img class="card-front" src="" alt="">
+      </div>
+
     </div>
   </body>
 </html>
