Kuvan etukuvat lisätty, pitää asetella oikein CSS:ssä

--- a/projekti-5/index.html
+++ b/projekti-5/index.html
@@ -23,83 +23,82 @@
 -->
       <div class="card">
         <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
-        <img class="card-front" src="" alt="">
-        <!-- korttien toiset puolet puuttuu -->
+        <img class="card-front" src="kuvat/hiiri.jpg" alt="hiiri">
       </div>
 
       <div class="card">
         <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
-        <img class="card-front" src="" alt="">
+        <img class="card-front" src="kuvat/hiiri.jpg" alt="hiiri">
       </div>
 
       <div class="card">
         <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
-        <img class="card-front" src="" alt="">
+        <img class="card-front" src="kuvat/pingviini.jpg" alt="pingviini">
       </div>
 
       <div class="card">
         <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
-        <img class="card-front" src="" alt="">
+        <img class="card-front" src="kuvat/pingviini.jpg" alt="pingviini">
       </div>
 
       <div class="card">
         <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
-        <img class="card-front" src="" alt="">
+        <img class="card-front" src="kuvat/koira.jpg" alt="koira">
       </div>
 
       <div class="card">
         <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
-        <img class="card-front" src="" alt="">
+        <img class="card-front" src="kuvat/koira.jpg" alt="koira">
       </div>
 
       <div class="card">
         <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
-        <img class="card-front" src="" alt="">
+        <img class="card-front" src="kuvat/kettu.jpg" alt="kettu">
       </div>
 
       <div class="card">
         <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
-        <img class="card-front" src="" alt="">
+        <img class="card-front" src="kuvat/kettu.jpg" alt="kettu">
       </div>
 
       <div class="card">
         <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
-        <img class="card-front" src="" alt="">
+        <img class="card-front" src="kuvat/lehma.jpg" alt="lehma">
       </div>
 
       <div class="card">
         <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
-        <img class="card-front" src="" alt="">
+        <img class="card-front" src="kuvat/lehma.jpg" alt="lehma">
       </div>
 
       <div class="card">
         <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
-        <img class="card-front" src="" alt="">
+        <img class="card-front" src="kuvat/kissa.jpg" alt="kissa">
       </div>
 
       <div class="card">
         <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
-        <img class="card-front" src="" alt="">
+        <img class="card-front" src="kuvat/kissa.jpg" alt="kissa">
       </div>
 
       <div class="card">
         <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
-        <img class="card-front" src="" alt="">
+        <img class="card-front" src="kuvat/norsu.jpg" alt="norsu">
       </div>
 
       <div class="card">
         <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
-        <img class="card-front" src="" alt="">
+        <img class="card-front" src="kuvat/norsu.jpg" alt="norsu">
       </div>
 
       <div class="card">
         <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
-        <img class="card-front" src="" alt="">
+        <img class="card-front" src="kuvat/apina.jpg" alt="apina">
       </div>
 
       <div class="card">
         <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
-        <img class="card-front" src="" alt="">
+        <img class="card-front" src="kuvat/apina.jpg" alt="apina">
       </div>
 
     </div>
