--- a/projekti-5/index.html
+++ b/projekti-5/index.html
@@ -22,83 +22,147 @@
       </div>
 -->
       <div class="card">
-        <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
-        <img class="card-front" src="kuvat/hiiri.jpg" alt="hiiri">
+        <div class="card-back" >
+          <img src="kuvat/question_mark.png" alt="kysymysmerkki">
+        </div>
+        <div class="card-front" >
+          <img src="kuvat/hiiri.jpg" alt="hiiri">
+        </div>
       </div>
 
       <div class="card">
-        <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
-        <img class="card-front" src="kuvat/hiiri.jpg" alt="hiiri">
+        <div class="card-back" >
+          <img src="kuvat/question_mark.png" alt="kysymysmerkki">
+        </div>
+        <div class="card-front" >
+          <img src="kuvat/hiiri.jpg" alt="hiiri">
+        </div>
       </div>
 
       <div class="card">
-        <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
-        <img class="card-front" src="kuvat/pingviini.jpg" alt="pingviini">
+        <div class="card-back" >
+          <img src="kuvat/question_mark.png" alt="kysymysmerkki">
+        </div>
+        <div class="card-front" >
+          <img src="kuvat/pingviini.jpg" alt="pingviini">
+        </div>
       </div>
 
       <div class="card">
-        <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
-        <img class="card-front" src="kuvat/pingviini.jpg" alt="pingviini">
+        <div class="card-back" >
+          <img src="kuvat/question_mark.png" alt="kysymysmerkki">
+        </div>
+        <div class="card-front" >
+          <img src="kuvat/pingviini.jpg" alt="pingviini">
+        </div>
       </div>
 
       <div class="card">
-        <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
-        <img class="card-front" src="kuvat/koira.jpg" alt="koira">
+        <div class="card-back" >
+          <img src="kuvat/question_mark.png" alt="kysymysmerkki">
+        </div>
+        <div class="card-front" >
+          <img src="kuvat/koira.jpg" alt="koira">
+        </div>
       </div>
 
       <div class="card">
-        <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
-        <img class="card-front" src="kuvat/koira.jpg" alt="koira">
+        <div class="card-back" >
+          <img src="kuvat/question_mark.png" alt="kysymysmerkki">
+        </div>
+        <div class="card-front" >
+          <img src="kuvat/koira.jpg" alt="koira">
+        </div>
       </div>
 
       <div class="card">
-        <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
-        <img class="card-front" src="kuvat/kettu.jpg" alt="kettu">
+        <div class="card-back" >
+          <img src="kuvat/question_mark.png" alt="kysymysmerkki">
+        </div>
+        <div class="card-front" >
+          <img src="kuvat/kettu.jpg" alt="kettu">
+        </div>
       </div>
 
       <div class="card">
-        <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
-        <img class="card-front" src="kuvat/kettu.jpg" alt="kettu">
+        <div class="card-back" >
+          <img src="kuvat/question_mark.png" alt="kysymysmerkki">
+        </div>
+        <div class="card-front" >
+          <img src="kuvat/kettu.jpg" alt="kettu">
+        </div>
       </div>
 
       <div class="card">
-        <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
-        <img class="card-front" src="kuvat/lehma.jpg" alt="lehma">
+        <div class="card-back" >
+          <img src="kuvat/question_mark.png" alt="kysymysmerkki">
+        </div>
+        <div class="card-front" >
+          <img src="kuvat/lehma.jpg" alt="lehma">
+        </div>
       </div>
 
       <div class="card">
-        <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
-        <img class="card-front" src="kuvat/lehma.jpg" alt="lehma">
+        <div class="card-back" >
+          <img src="kuvat/question_mark.png" alt="kysymysmerkki">
+        </div>
+        <div class="card-front" >
+          <img src="kuvat/lehma.jpg" alt="lehma">
+        </div>
       </div>
 
       <div class="card">
-        <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
-        <img class="card-front" src="kuvat/kissa.jpg" alt="kissa">
+        <div class="card-back" >
+          <img src="kuvat/question_mark.png" alt="kysymysmerkki">
+        </div>
+        <div class="card-front" >
+          <img src="kuvat/kissa.jpg" alt="kissa">
+        </div>
       </div>
 
       <div class="card">
-        <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
-        <img class="card-front" src="kuvat/kissa.jpg" alt="kissa">
+        <div class="card-back" >
+          <img src="kuvat/question_mark.png" alt="kysymysmerkki">
+        </div>
+        <div class="card-front" >
+          <img src="kuvat/kissa.jpg" alt="kissa">
+        </div>
       </div>
 
       <div class="card">
-        <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
-        <img class="card-front" src="kuvat/norsu.jpg" alt="norsu">
+        <div class="card-back" >
+          <img src="kuvat/question_mark.png" alt="kysymysmerkki">
+        </div>
+        <div class="card-front" >
+          <img src="kuvat/norsu.jpg" alt="norsu">
+        </div>
       </div>
 
       <div class="card">
-        <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
-        <img class="card-front" src="kuvat/norsu.jpg" alt="norsu">
+        <div class="card-back" >
+          <img src="kuvat/question_mark.png" alt="kysymysmerkki">
+        </div>
+        <div class="card-front" >
+          <img src="kuvat/norsu.jpg" alt="norsu">
+        </div>
       </div>
 
       <div class="card">
-        <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
-        <img class="card-front" src="kuvat/apina.jpg" alt="apina">
+        <div class="card-back" >
+          <img src="kuvat/question_mark.png" alt="kysymysmerkki">
+        </div>
+        <div class="card-front" >
+          <img src="kuvat/apina.jpg" alt="apina">
+        </div>
       </div>
 
       <div class="card">
-        <img class="card-back" src="kuvat/taustaKortti.jpg" alt="risti ässä">
-        <img class="card-front" src="kuvat/apina.jpg" alt="apina">
+        <div class="card-back" >
+          <img src="kuvat/question_mark.png" alt="kysymysmerkki">
+        </div>
+        <div class="card-front" >
+          <img src="kuvat/apina.jpg" alt="apina">
+        </div>
       </div>
 
     </div>
